unpackaged/main/default/objects/Entrega__c/Entrega__c.object-meta.xml
<CustomObject>
    <label>Entrega</label>
    <nameField>
        <label>Entrega Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entregas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>