unpackaged/main/default/objects/Entrega__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Asignado</fullName>
                <default>true</default>
                <label>No Asignado</label>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>