unpackaged/main/default/objects/Entrega__c/fields/Fecha_Planeada_de_Finalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Planeada_de_Finalizacion__c</fullName>
    <label>Fecha Planeada de Finalizacion</label>
    <type>DateTime</type>
</CustomField>