unpackaged/main/default/objects/Entrega__c/fields/ID_de_Viaje__c.field-meta.xml
<CustomField>
    <fullName>ID_de_Viaje__c</fullName>
    <externalId>true</externalId>
    <label>ID de Viaje</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>