unpackaged/main/default/objects/Entrega__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <label>Ruta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>