unpackaged/main/default/objects/Entrega__c/fields/Usuario_ANS__c.field-meta.xml
<CustomField>
    <fullName>Usuario_ANS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario ANS al que se le transfirieron las ordenes de la entrega.</description>
    <label>Usuario ANS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entregas</relationshipName>
    <type>Lookup</type>
</CustomField>