unpackaged/main/default/objects/Entrega__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_de_Viaje__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_Inicio__c</columns>
    <columns>Fecha_Planeada_de_Finalizacion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>